--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         });
     </script>
 </head>
-<body>
+<body id="jj">
 <div class="topz mg2" id="menu">
 	<div class="top mg">
 		<div class="topl f"><a href=""><img align="absmiddle" src="images/title.png" /></a></div>
@@ -374,6 +374,7 @@ $(document).ready(function(e) {
 		});
 	</script>
 	</div>
+	<div class="wyzp1 mg xi40 cen hong" id="moretext">更多</div>
 	<div class="more" aos="flip-up">
 		<div class="project-list">
 			<div class="project">
