--- a/gyyq.html
+++ b/gyyq.html
@@ -141,7 +141,7 @@
 	</div>
   </div>
 
-<script src="http://www.jq22.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/colorfulTab.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
