--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         });
     </script>
 </head>
-<body id="jj">
+<body>
 <div class="topz mg2" id="menu">
 	<div class="top mg">
 		<div class="topl f"><a href=""><img align="absmiddle" src="images/title.png" /></a></div>
-		<div class="topr r xi24 bai">
+		<div class="topr r xi24 bai" id="box">
 			<ul>
 				<li><a href="index.html">首页</a></li>
 				<li><a href="gyyq.html">关于疫情</a></li>
@@ -146,11 +146,15 @@ $(document).ready(function(e) {
 		<li>新闻2<p class="time">时间1</p></li>
 		<li>新闻3<p class="time">时间1</p></li></ul></div></div>
 	<div class="conl f bai xi18 tm block"></div>
-	<div class="outbox" aos="fade-zoom-in"><div class="conl f bai xi18 tm">学校新闻</div>
+	<div class="outbox" aos="fade-zoom-in"><div class="conl f bai xi18 tm">校园新闻</div>
 		<div class="line"></div><div class="innertext"><ul>
-		<li>新闻1<p class="time">时间1</p></li>
-		<li>新闻2<p class="time">时间1</p></li>
-		<li>新闻3<p class="time">时间1</p></li></ul></div></div>	
+		<li><a href="article/school/school1.html"><span class="articletext">同心抗疫、共克时艰：筑牢疫情防线，共赢抗疫“春天”</span><p class="time">2022年04月07日</p></a></li>
+		<li><a href="article/school/school2.html"><span class="articletext">同心战疫、共克时艰：聚“材”战“疫”静享春光</span><p class="time">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2022年04月06日</p></a></li>
+		<li><a href="article/school/school3.html"><span class="articletext">同心抗疫，共克时艰: 物理学院疫情防控工作纪实</span><p class="time">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2022年04月05日</p></a></li>
+		<li><a href="article/school/school4.html"><span class="articletext">郑州大学：同心抗疫 共待春晖</span><p class="time">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2022年04月03日</p></a></li>
+		<li><a href="article/school/school5.html"><span class="articletext">同心抗疫、共克时艰：防疫抗疫 郑大青年在行动</span><p class="time">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2022年03月30日</p></a></li>
+		<li><a href="article/school/school6.html"><span class="articletext">郑大故事：有一种爱，叫与你并肩作战</span><p class="time">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2022年02月28日</p></a></li>
+		</ul></div></div>	
 </div>
 <div class="con mg down" aos="fade-zoom-in">
 	<div class="line down" id="leftline" aos="fade-left"></div>
@@ -425,11 +429,13 @@ $(document).ready(function(e) {
 </script>
 <script type="text/javascript" src="/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="smohan.fixednav.js"></script>
+<!--
 <script>
   $(document).ready(function(){
     $("#menu").sticky({topSpacing:0});
   });
 </script>
+-->
 <script>
 AOS.init({
   offset: 200,
